--- a/package.json
+++ b/package.json
@@ -1,22 +1,27 @@
 {
   "name": "packbooks",
   "version": "1.0.0",
-  "description": "",
+  "description": "Sistema login de packbooks",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Juan Cúñez",
   "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^2.4.0",
-    "body-parser": "^1.15.2",
-    "cookie-parser": "^1.4.3",
-    "express": "^4.14.0",
-    "express-session": "^1.14.2",
-    "express-validator": "^3.1.2",
-    "mongoose": "^4.7.5",
-    "passport": "^0.3.2",
-    "passport-local": "^1.0.0"
+    "bcryptjs": "*",
+    "body-parser": "*",
+    "connect-flash": "*",
+    "cookie-parser": "^1.4.1",
+    "express": "*",
+    "express-handlebars": "*",
+    "express-messages": "*",
+    "express-session": "*",
+    "express-validator": "*",
+    "mongodb": "*",
+    "mongoose": "*",
+    "passport": "*",
+    "passport-http": "*",
+    "passport-local": "*"
   }
 }
